# tau2-green-agent

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
.github/workflows/: docker-publish.yml  test-and-publish.yml
docs/: GREEN_AGENT_PHASE1_ADDITIONAL_REPORT.md  GREEN_AGENT_VERIFICATION_REPORT.md
src/: agent.py  executor.py  messenger.py  server.py
tests/: conftest.py  test_agent.py  test_eval_request.py
